k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-webapp-deploy
  labels:
    app-deploy: springboot-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app-pod: springboot-webapp
  template:
    metadata:
      labels:
        app-pod: springboot-webapp
    spec:
      containers:
      - name: springboot-webapp-pod
        image: kwonghung/springboot-to-skaffold
        ports:
        - containerPort: 8080
