k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-webapp-svc
  labels:
    app-svc: springboot-webapp-svc
spec:
  selector:
    app-pod: springboot-webapp-pod
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
