k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-webapp-ingress
spec:
  rules:
  - host: springboot-webapp.hung.org.hk
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: springboot-webapp-svc
            port:
              name: http
